--- a/_config.yml
+++ b/_config.yml
@@ -1,20 +1,14 @@
 # Site settings
-title: Mauricio Urraco
+title: Robert Keen
 description: Jekyll Theme Minimal Resume
 # baseurl: "" # the subpath of your site, e.g. /blog
 # url: "localhost:3000" # the base hostname & protocol for your site e.g. http://willianjusten.com.br
 
 # User settings
-username: Mauricio Urraco
-user_description: I\'m a nomad Software Engineer, always searching for the next challenge; no task is too scary nor too difficult. Lately I have been immersed in the <b>crypto-world</b> working for Radix, a London based startup trying to create the next massive scalable DLT. I'm one of the two guys behind all the JS related stuff. Visit my blog here <a href="https://mauriciourraco.com" target="_blank">https://mauriciourraco.com</a>
+username: Robert Keen
+user_description: I am a third-year software engineering student at the university of victoria who has both the willingness and capability to innovate the feild of Software Engineering. Am I a good team player? I eat good team players for breakfast. I have not only been a member of University of Victoria's Autonomous Victoria's Autonomous Underwater Vehicles Interdisciplinary Club for three years, I was elected President of the club for the Fall 2019 Semester. Through this, I have gained experience both being a member of an engineering/software development team, and leading one. Professional experience? I am the person students hope aren't applying for the Co-op they want. I have so far completed two four-month work terms in my three years at school. First with AUVIC where I worked with C to write firmware for an Autonomous Underwater Vehicle's motor controller. My second work term was with AXYS Technologies Inc. where I worked with Python and environmental data to generate webpages for clients to view data, and Bash and Ansible to automate system setup for Linux Industrial PCs. I also have extensive software development experience outside of my workterms. This experience includes but is not limited to, with C++ to make computer vision software for an Autonomous Underwater Vehicle to detect buoys, using Python to create unit tests and manage an SQL database, Applying Java in my courses, and working with Bash scripting and C to make my Linux system (the best system) as efficient as it possibly can be. You want beans? When you hire me, you will get the entire pot.
 user_title: Software Engineer
-email: mauriurraco@gmail.com
-# twitter_username: lorem_ipsum
-# github_username:  lorem_ipsum
-# gplus_username:  lorem_ipsum
+email: robertkeen9@gmail.com
 
-# Google-analytics
-google-analytics:
-  id: ""
 
 exclude: ['package.json', 'src' , 'node_modules']
